// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApplicationHeaderLayout should render with provided extensions 1`] = `
<InjectIntl(ApplicationHeaderLayout)
  extensions={
    <div
      id="test-extensions"
    >
      Extensions
    </div>
  }
/>
`;

exports[`ApplicationHeaderLayout should render with provided extensions and navigation 1`] = `
<InjectIntl(ApplicationHeaderLayout)
  extensions={
    <div
      id="test-extensions"
    >
      Extensions
    </div>
  }
  navigation={
    <div
      id="test-navigation"
    >
      Navigation
    </div>
  }
/>
`;

exports[`ApplicationHeaderLayout should render with provided extensions, navigation, and logo 1`] = `
<InjectIntl(ApplicationHeaderLayout)
  extensions={
    <div
      id="test-extensions"
    >
      Extensions
    </div>
  }
  logo={
    <div
      id="test-logo"
    >
      Logo
    </div>
  }
  navigation={
    <div
      id="test-navigation"
    >
      Navigation
    </div>
  }
/>
`;

exports[`ApplicationHeaderLayout should render with provided extensions, navigation, logo, and toggle 1`] = `
<InjectIntl(ApplicationHeaderLayout)
  extensions={
    <div
      id="test-extensions"
    >
      Extensions
    </div>
  }
  logo={
    <div
      id="test-logo"
    >
      Logo
    </div>
  }
  navigation={
    <div
      id="test-navigation"
    >
      Navigation
    </div>
  }
  toggle={
    <div
      id="test-toggle"
    >
      Toggle
    </div>
  }
/>
`;

exports[`ApplicationHeaderLayout should render with provided extensions, navigation, logo, toggle, and utilities 1`] = `
<InjectIntl(ApplicationHeaderLayout)
  extensions={
    <div
      id="test-extensions"
    >
      Extensions
    </div>
  }
  logo={
    <div
      id="test-logo"
    >
      Logo
    </div>
  }
  navigation={
    <div
      id="test-navigation"
    >
      Navigation
    </div>
  }
  toggle={
    <div
      id="test-toggle"
    >
      Toggle
    </div>
  }
  utilities={
    <div
      id="test-utilities"
    >
      Utilities
    </div>
  }
/>
`;

exports[`ApplicationHeaderLayout should render with provided logo 1`] = `
<InjectIntl(ApplicationHeaderLayout)
  logo={
    <div
      id="test-logo"
    >
      Logo
    </div>
  }
/>
`;

exports[`ApplicationHeaderLayout should render with provided logo, toggle, and utilities 1`] = `
<InjectIntl(ApplicationHeaderLayout)
  logo={
    <div
      id="test-logo"
    >
      Logo
    </div>
  }
  toggle={
    <div
      id="test-toggle"
    >
      Toggle
    </div>
  }
  utilities={
    <div
      id="test-utilities"
    >
      Utilities
    </div>
  }
/>
`;

exports[`ApplicationHeaderLayout should render with provided navigation 1`] = `
<InjectIntl(ApplicationHeaderLayout)
  navigation={
    <div
      id="test-navigation"
    >
      Navigation
    </div>
  }
/>
`;

exports[`ApplicationHeaderLayout should render with provided navigation, logo, toggle, and utilities 1`] = `
<InjectIntl(ApplicationHeaderLayout)
  logo={
    <div
      id="test-logo"
    >
      Logo
    </div>
  }
  navigation={
    <div
      id="test-navigation"
    >
      Navigation
    </div>
  }
  toggle={
    <div
      id="test-toggle"
    >
      Toggle
    </div>
  }
  utilities={
    <div
      id="test-utilities"
    >
      Utilities
    </div>
  }
/>
`;

exports[`ApplicationHeaderLayout should render with provided toggle 1`] = `
<InjectIntl(ApplicationHeaderLayout)
  toggle={
    <div
      id="test-toggle"
    >
      Toggle
    </div>
  }
/>
`;

exports[`ApplicationHeaderLayout should render with provided toggle and utilities 1`] = `
<InjectIntl(ApplicationHeaderLayout)
  toggle={
    <div
      id="test-toggle"
    >
      Toggle
    </div>
  }
  utilities={
    <div
      id="test-utilities"
    >
      Utilities
    </div>
  }
/>
`;

exports[`ApplicationHeaderLayout should render with provided utilities 1`] = `
<InjectIntl(ApplicationHeaderLayout)
  utilities={
    <div
      id="test-utilities"
    >
      Utilities
    </div>
  }
/>
`;

exports[`ApplicationHeaderLayout should render without optional props 1`] = `<InjectIntl(ApplicationHeaderLayout) />`;
